<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/convert_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/app_name_show"
        android:background="@android:color/holo_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/title_activity_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_title_conversor"
        android:textSize="@dimen/size_title_activity"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/title_distance_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convert_activity_toolbar"/>
    <Button
        android:id="@+id/button_origem_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textbutton_origem"
        android:layout_margin="@dimen/distance_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_activity_convert"/>
    <Button
        android:id="@+id/button_destiny_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textebuttom_destino"
        android:layout_marginTop="@dimen/distance_button"
        app:layout_constraintTop_toBottomOf="@id/button_origem_change"
        app:layout_constraintStart_toStartOf="@id/button_origem_change"/>
    <EditText
        android:id="@+id/inputtext_origem"
        android:layout_width="@dimen/edittext_valor_size"
        android:layout_height="wrap_content"
        android:hint="@string/hint_valor"
        android:inputType="number"
        android:layout_marginStart="@dimen/distance_edittext"
        app:layout_constraintStart_toEndOf="@id/button_origem_change"
        app:layout_constraintTop_toTopOf="@id/button_origem_change"/>
    <EditText
        android:id="@+id/inputtext_destiny"
        android:layout_width="@dimen/edittext_valor_size"
        android:layout_height="wrap_content"
        android:hint="@string/hint_valor"
        android:inputType="number"
        android:layout_marginStart="@dimen/distance_edittext"
        app:layout_constraintBottom_toBottomOf="@id/button_destiny_change"
        app:layout_constraintStart_toEndOf="@id/button_destiny_change"/>
    <Button
        android:id="@+id/convert_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textbutton_converter"
        android:layout_marginBottom="@dimen/distance_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>